@@ -1,4 +1,4 @@
-package com.sparta.final_project.config;
+package com.sparta.final_project.config.security;
 
 import com.sparta.final_project.domain.user.entity.UserRole;
 import lombok.Getter;
@@ -6,7 +6,7 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Getter
 public class AuthUser {
@@ -14,23 +14,18 @@ public class AuthUser {
     // 토큰에 유저정보를 가져와서 권한을 확인하기 위한 자료
     // 인증하는곳에서는 중요한 정보를 넣으면 안됌
     // 로그인정보
-    private final Long userId;
+    private final Long id;
 
     private final String name;
 
     private final String email;
 
-    private final UserRole role;
-
     private final Collection<? extends GrantedAuthority> authorities;
 
-    public AuthUser(Long userId, String name, String email, UserRole role) {
-        this.userId = userId;
+    public AuthUser(Long id, String name, String email, UserRole role) {
+        this.id = id;
         this.name = name;
         this.email = email;
-        this.role = role;
-        this.authorities = role != null
-                ? Collections.singletonList(new SimpleGrantedAuthority(role.name()))
-                : Collections.emptyList();
+        this.authorities = List.of(new SimpleGrantedAuthority(role.name()));
     }
 }
